# shine-service-rs

./: Cargo.toml  README.md  docker-compose.yml  rustfmt.toml
shine-macros/src/: lib.rs
shine-service/: Cargo.toml
shine-service/src/: lib.rs
shine-service/src/axum/: mod.rs  openapi.rs  problem_detail.rs  session.rs  site_info.rs  tracing.rs  validated.rs  validated_json.rs
shine-service/src/axum/telemetry/: mod.rs  otel_http.rs  otel_layer.rs  telemetry_manager.rs
shine-service/src/axum/tracing/: mod.rs  otel_http.rs  otel_layer.rs  tracing_manager.rs
shine-service/src/azure/: azure_keyvault_config.rs
shine-service/src/service/: cacerts.rs  client_fingerprint.rs  core_config.rs  mod.rs  redis.rs  user_session.rs
shine-service/src/service/postgres/: error_check.rs  mod.rs  pg_connection.rs
shine-service/src/utils/: error.rs  mod.rs  optimus.rs  serde.rs
shine-service/src/utils/id_encoders/: harsh_id_encoder.rs  id_encoder.rs  prefixed_id_encoder.rs
shine-service/tests/: pg_prepared_statements.rs  pg_query.rs
shine-test/: Cargo.toml
shine-test-macros/: Cargo.toml
shine-test-macros/src/: lib.rs
sqlx/sqlx-interpolation/: Cargo.toml
sqlx/sqlx-interpolation-macro/: Cargo.toml
sqlx/sqlx-interpolation-macro/src/: lib.rs  sqlx_interpolate.rs
sqlx/sqlx-interpolation-macro/tests/: test.rs
sqlx/sqlx-interpolation/src/: db_kind.rs  error.rs  expr.rs  lib.rs  list_expression.rs  query_builder.rs  tuple_expression.rs  types.rs
