[package]
name = "shine-service"
version = "0.1.0"
edition = "2021"

[features]
default = ["ot_jaeger", "ot_zipkin", "ot_app_insight"]

ot_jaeger = ["opentelemetry-jaeger"]
ot_zipkin = ["opentelemetry-zipkin"]
ot_app_insight = ["reqwest", "opentelemetry-application-insights"]

[dependencies]
log = "0.4"
thiserror = "1.0"
config = "0.13"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
hex = "0.4"
ring = "0.17"
primal-check = "0.3"
regex = "1.10"

pin-project = "1.1"
futures = "0.3"
async-trait = "0.1"
tokio = {version = "1.34", features = ["macros", "rt-multi-thread", "signal"] }
rustls = "0.21" 
rustls-native-certs = "0.6"
rustls-pemfile = "1.0"
reqwest = { version = "0.11", optional = true }

validator = { version = "0.16", features = ["derive"] }
utoipa = { version = "4.1", features = ["uuid", "chrono", "debug"] }

bb8 = "0.8"
bb8-redis = "0.14"
redis = { version = "0.24.0", features = ["tokio-comp", "tokio-rustls-comp"] }
bb8-postgres = "0.8"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "runtime"] }
tokio-rustls = "0.25"
tokio-postgres-rustls = "0.10"
postgres-from-row = "0.5"

azure_core = { version = "0.17" }
azure_identity = { version = "0.17" }
azure_security_keyvault = { version = "0.17" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
tracing-opentelemetry-instrumentation-sdk = "0.15"
opentelemetry = "0.21"
opentelemetry-semantic-conventions = "0.13"
opentelemetry_sdk = { version = "0.21", features = [] }
opentelemetry-stdout = { version = "0.2", features = ["logs", "trace"] }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"], optional = true }
opentelemetry-zipkin = { version ="0.19", features = ["reqwest-client"], default-features = false, optional = true }
opentelemetry-application-insights = { version = "0.29", optional = true }

tower = "0.4"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie", "cookie-signed", "cookie-private", "typed-header"] }

shine-macros = { path = "../shine-macros", version = "0.1.0" }

[dev-dependencies]
shine-test = { path = "../shine-test", version = "0.1.0" }