[package]
name = "sqlx-interpolation-macro"
version = "0.1.0"
authors = ["gzp-crey <z.p.gaal@google.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
env_logger = "0.10"
color-backtrace = "0.5"


